[metadata]
name = mkdocs-backlinks-section-plugin
version = 0.0.3
author = six-two
author_email = pip@six-two.dev
description = Adds a backlinks section that lists every page linking to the current page.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/six-two/mkdocs-backlinks-section-plugin
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
scripts =
install_requires =
    mkdocs>=1.5.0 # Needed for mkdocs.plugins.get_plugin_logger

[options.entry_points]
mkdocs.plugins =
    backlinks_section = mkdocs_backlinks_section_plugin:BacklinksSectionPlugin

[options.packages.find]
where = src
